2007-01-16  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/FallbackNameClient.cpp,Companion.cpp:
	called name server entry "/root" instead of "root" now that
	it is a real port.

2007-01-12  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/PortCoreInputUnit.cpp: Made connections
	reversible, so that an input connection can switch to 
	become an output connection.  This is helpful for communication
	with non-YARP processes, where a connection to read data is
	initiated externally.

	* README: Updated compile/install instructions.

2007-01-11  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/HttpCarrier.h: Made basic port 
	properties visible to http connections (e.g. from web browser)

	* src/libYARP_OS/include/yarp/NameserCarrier.h: Made name server
	protocol a protocol supported at the port level.

	* src/libYARP_OS/src/NameServer.cpp: Modified name server slightly
	so that it uses a real port.  All port-level protocols and tools
	can now be used to communicate with it.  In particular
	"yarp rpc /root" works.

2007-01-11  Alexandre Bernardino  <alex@isr.ist.utl.pt>

	* src/libYARP_dev/src/dragonfly/common/yarp/DragonflyDeviceDriver.h: 
	Added a new option (--flea) to provide support for pointgray FLEA
	cameras.
	
	* src/libYARP_dev/src/dragonfly/winnt/yarp/DragonflyDeviceDriver.cpp: 
	1. Removed the hardcoded parameter initialization. 
	2. Added FLEA camera's support through a more general color 
	reconstruction method.
	
	* src/libYARP_dev/src/dragonfly/winnt/yarp/COPYRIGHT: 
	Original copyright for the Bayer2RGB color reconstruction method 
	from OpenCV.


2007-01-10  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Companion.cpp: Added "ping" and "exists"
	subcommands, to facilitate gathering information about the
	existence and properties of a port.

2007-01-09  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/ffmpeg: Added --nodelay flag if realtime