@@ -1,3 +1,8 @@
+2007-01-17  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/libYARP_OS/src/BottleImpl.cpp,PortCoreInputUnit.cpp: try to
+	deal with newest ACE not using -1 anymore for string methods.
+
 2007-01-16  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* src/libYARP_OS/src/FallbackNameClient.cpp,Companion.cpp:
